[gd_scene load_steps=3 format=3 uid="uid://bubk2nw11oxeb"]

[ext_resource type="Script" path="res://Script/2DCard/2dCardCreator.gd" id="1_rkxxl"]
[ext_resource type="PackedScene" uid="uid://oe5cyfiodir" path="res://Scene/2dCard.tscn" id="2_krnkc"]

[node name="2dCardCreator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rkxxl")
CARD = ExtResource("2_krnkc")

[node name="AttackOptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 50.0
offset_right = 525.0
offset_bottom = 70.0

[node name="Label" type="Label" parent="AttackOptionButton"]
layout_mode = 0
offset_top = -30.0
offset_right = 64.0
offset_bottom = -4.0
text = "Damage"

[node name="BlockOptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 110.0
offset_right = 525.0
offset_bottom = 130.0

[node name="Label" type="Label" parent="BlockOptionButton"]
layout_mode = 0
offset_top = -30.0
offset_right = 64.0
offset_bottom = -4.0
text = "Defense"

[node name="CostOptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 170.0
offset_right = 525.0
offset_bottom = 190.0

[node name="Label" type="Label" parent="CostOptionButton"]
layout_mode = 0
offset_top = -30.0
offset_right = 40.0
offset_bottom = -4.0
text = "Cost"

[node name="TypeOptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 230.0
offset_right = 525.0
offset_bottom = 250.0

[node name="Label" type="Label" parent="TypeOptionButton"]
layout_mode = 0
offset_top = -30.0
offset_right = 40.0
offset_bottom = -4.0
text = "Type"

[node name="LoadOptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 600.0
offset_right = 250.0
offset_bottom = 620.0

[node name="Label" type="Label" parent="LoadOptionButton"]
layout_mode = 0
offset_top = -30.0
offset_right = 113.0
offset_bottom = -4.0
text = "Load Selection"

[node name="TitleTextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 50.0
offset_right = 250.0
offset_bottom = 86.0
placeholder_text = "Card Title"

[node name="DescriptionTextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 110.0
offset_right = 250.0
offset_bottom = 146.0
placeholder_text = "Card Description"

[node name="DisplayCardNode" type="Node2D" parent="."]
position = Vector2(900, 325)

[node name="ResetButton" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 230.0
offset_right = 250.0
offset_bottom = 262.0
text = "Reset Card"

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 170.0
offset_right = 250.0
offset_bottom = 202.0
text = "Save Card"

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 0
offset_left = 530.0
offset_top = 600.0
offset_right = 754.0
offset_bottom = 632.0
text = "Delete Card"

[node name="ImageUploadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 300.0
offset_right = 249.0
offset_bottom = 332.0
text = "Load Image
"

[node name="LoadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 600.0
offset_right = 504.0
offset_bottom = 632.0
text = "Load Card
"

[node name="ImageFileDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(25, 50)
size = Vector2i(500, 500)
ok_button_text = "Open"
file_mode = 0
root_subfolder = "res://Sprites/CardImage"

[connection signal="file_selected" from="ImageFileDialog" to="." method="_on_image_file_dialog_file_selected"]
